# LLVM-Canon

./: .gitignore  CMakeLists.txt
include/: IRCanonicalizer.h
src/: IRCanonicalizer.cpp  Tool.cpp
